--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -26,7 +26,7 @@
               <%= f.text_field :email, placeholder: "Email" %>
               <%= f.password_field :password, placeholder: "Password" %>
               <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
-              <%= f.submit "Signup", :type => :button, :class => "btn btn-custom" %>
+              <%= f.submit "Signup", :class => "btn btn-custom" %>
           <% end %>
           <a href="/" style="font-size: small;">Already registered? Login</a>
 				</div>
