ready for geolocation

--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -19,6 +19,7 @@
 		</div>
 		<div class="container-fluid">
 			<div id="vert-center">
+        <p id = "flash-error"> <%= flash[:error] %> </p>
 				<div id="icon-list">
 					<img src="img/facebook.png">
 					<img src="img/twitter.png">
